--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,74 @@
-# Virtual environment
-venv/
+# Python
 __pycache__/
-*.pyc
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# Model and data artifacts
-models/
-data/
+# Virtual environments
+venv/
+env/
+ENV/
 
-# OS and IDE files
+# Environment variables
+.env
+.env.local
+
+# Model artifacts (keep structure, ignore saved models)
+models/saved/
+*.pkl
+*.joblib
+
+# Data files
+data/*.csv
+data/*.json
+data/*.parquet
+
+# Database
+*.db
+*.sqlite3
+
+# Logs
+*.log
+logs/
+
+# OS files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDE
 .vscode/
+.idea/
+*.swp
+*.swo
+
+# Docker
+.dockerignore
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+
+# Jupyter
+.ipynb_checkpoints/
